--- a/css/components/section.css
+++ b/css/components/section.css
@@ -9,4 +9,12 @@
     margin-bottom: 60px;
 }
 
+.section.-bgblack {
+    background-color: #000;
+}
+
+
+.section.-bdFirst {
+    border-color: #F25A70;
+}
 
