--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -1,20 +1,20 @@
-.section {
+.main-section {
     background-color: #F25A70;
     padding-top: 50px;
     padding-bottom: 100px;
     border-bottom: 10px solid #7c5e99;
 }
 
-.section .main-title {
+.main-section .main-title {
     margin-bottom: 60px;
 }
 
-.section.-bgblack {
+.main-section.-bgblack {
     background-color: #000;
 }
 
 
-.section.-bdFirst {
+.main-section.-bdFirst {
     border-color: #F25A70;
 }
 
