--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -18,3 +18,10 @@
     border-color: #F25A70;
 }
 
+.main-section.-bgsecond {
+    background-color:#7c5e99; 
+}
+
+.main-section.-bdBlack {
+    border-color: #000;
+}
